# fujidrop

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: __init__.py  config.py  server.py
backend/api/: routes.py
backend/api/camera/: __init__.py  handlers.py  responses.py  routes.py
backend/api/camera/types/: __init__.py  asset.py  device.py
backend/api/client/: __init__.py  handlers.py  routes.py
backend/db/: __init__.py  connection.py  models.py
backend/services/: asset_processor.py  google_photos.py
nginx/: nginx.conf
scripts/: start-dnsmasq.sh
